# kubespark

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICK_START_SETTINGS.md  README.md  SETTINGS.md  UI_FEATURES.md  VISUAL_PREVIEW.md
.docs/: README.md  app_walkthrough.md  architecture.md  code_walkthrough.md  dev_guide.md  getting_started.md  project_structure.md
src/: app.rs  main.rs  theme.rs
src/kubernetes/: client.rs  mod.rs  resources.rs
src/settings/: config.rs  manager.rs  mod.rs  ui.rs
src/ui/: dashboard.rs  detail_view.rs  glass.rs  logs.rs  mod.rs  resource_list.rs  sidebar.rs  status_bar.rs
