[package]
name = "kubespark"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

# Kubernetes client
kube = { version = "0.97", features = ["client", "runtime", "derive", "ws", "config"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UI utilities
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
